linked stylesheet and made a button

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="utf-8">
     <title>Bonus Calculator Object Challenge</title>
     <script src="client.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+
     <h1>Bonus Calculator Object Challenge</h1>
+    
+<button id='calBonus'> Calculate Bonus</button>
+
   </body>
+
+
+
 </html>
